[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/WindowResize/window_resize2.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 18.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResizeArea" type="Control" parent="."]
mouse_default_cursor_shape = 12
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_entered" from="VBoxContainer/Panel" to="." method="_on_Panel_tree_entered"]
[connection signal="tree_exited" from="VBoxContainer/Panel" to="." method="_on_Panel_tree_exited"]
[connection signal="tree_entered" from="VBoxContainer/TextEdit" to="." method="_on_TextEdit_tree_entered"]
[connection signal="tree_exited" from="VBoxContainer/TextEdit" to="." method="_on_TextEdit_tree_exited"]
[connection signal="tree_entered" from="ResizeArea" to="." method="_on_ResizeArea_tree_entered"]
[connection signal="tree_exited" from="ResizeArea" to="." method="_on_ResizeArea_tree_exited"]
